✨ feat(all): 服务详情查询
