# docs/swagger.yaml
@@ -1,4 +1,125 @@
 definitions:
+  dao.AccessControl:
+    properties:
+      black_list:
+        type: string
+      clientip_flow_limit:
+        type: integer
+      id:
+        type: integer
+      open_auth:
+        type: integer
+      service_flow_limit:
+        type: integer
+      service_id:
+        type: integer
+      white_host_name:
+        type: string
+      white_list:
+        type: string
+    type: object
+  dao.GrpcRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
+  dao.HttpRule:
+    properties:
+      header_transfor:
+        type: string
+      id:
+        type: integer
+      need_https:
+        type: integer
+      need_strip_uri:
+        type: integer
+      need_websocket:
+        type: integer
+      rule:
+        type: string
+      rule_type:
+        type: integer
+      service_id:
+        type: integer
+      url_rewrite:
+        type: string
+    type: object
+  dao.LoadBalance:
+    properties:
+      check_interval:
+        type: integer
+      check_method:
+        type: integer
+      check_timeout:
+        type: integer
+      forbid_list:
+        type: string
+      id:
+        type: integer
+      ip_list:
+        type: string
+      round_type:
+        type: integer
+      service_id:
+        type: integer
+      upstream_connect_timeout:
+        type: integer
+      upstream_header_timeout:
+        type: integer
+      upstream_idle_timeout:
+        type: integer
+      upstream_max_idle:
+        type: integer
+      weight_list:
+        type: string
+    type: object
+  dao.ServiceDetail:
+    properties:
+      access_control:
+        $ref: '#/definitions/dao.AccessControl'
+      grpc_rule:
+        $ref: '#/definitions/dao.GrpcRule'
+      http_rule:
+        $ref: '#/definitions/dao.HttpRule'
+      info:
+        $ref: '#/definitions/dao.ServiceInfo'
+      load_balance:
+        $ref: '#/definitions/dao.LoadBalance'
+      tcp_rule:
+        $ref: '#/definitions/dao.TcpRule'
+    type: object
+  dao.ServiceInfo:
+    properties:
+      create_at:
+        type: string
+      id:
+        type: integer
+      is_delete:
+        type: integer
+      load_type:
+        type: integer
+      service_desc:
+        type: string
+      service_name:
+        type: string
+      update_at:
+        type: string
+    type: object
+  dao.TcpRule:
+    properties:
+      id:
+        type: integer
+      port:
+        type: integer
+      service_id:
+        type: integer
+    type: object
   dto.AdminInfoOutput:
     properties:
       avatar:
@@ -59,18 +180,22 @@ definitions:
       ip_list:
         type: string
       open_auth:
+        description: 权限访问控制
         type: integer
       port:
+        description: GRPC路由配置
         maximum: 8999
         minimum: 8001
         type: integer
       round_type:
+        description: 负载均衡
         type: integer
       service_desc:
         type: string
       service_flow_limit:
         type: integer
       service_name:
+        description: 服务基本信息
         type: string
       weight_list:
         type: string
@@ -86,6 +211,117 @@ definitions:
     - weight_list
     type: object
   dto.ServiceAddHTTPInput:
+    properties:
+      black_list:
+        description: 黑名单ip
+        example: ""
+        type: string
+      clientip_flow_limit:
+        description: 客户端ip限流
+        example: 0
+        minimum: 0
+        type: integer
+      header_transfor:
+        description: header转换
+        example: ""
+        type: string
+      ip_list:
+        description: ip列表
+        example: ""
+        type: string
+      need_https:
+        description: 支持https
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      need_strip_uri:
+        description: 启用strip_uri
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      need_websocket:
+        description: 是否支持websocket
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      open_auth:
+        description: 权限访问控制
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      round_type:
+        description: 负载均衡
+        example: 0
+        maximum: 3
+        minimum: 0
+        type: integer
+      rule:
+        description: 域名或者前缀
+        example: ""
+        type: string
+      rule_type:
+        description: http路由配置
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      service_desc:
+        description: 服务描述
+        example: ""
+        maxLength: 255
+        minLength: 1
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        example: 0
+        minimum: 0
+        type: integer
+      service_name:
+        description: 服务基本信息
+        example: ""
+        type: string
+      upstream_connect_timeout:
+        description: 建立连接超时, 单位s
+        example: 0
+        minimum: 0
+        type: integer
+      upstream_header_timeout:
+        description: 获取header超时, 单位s
+        example: 0
+        minimum: 0
+        type: integer
+      upstream_idle_timeout:
+        description: 链接最大空闲时间, 单位s
+        example: 0
+        minimum: 0
+        type: integer
+      upstream_max_idle:
+        description: 最大空闲链接数
+        example: 0
+        minimum: 0
+        type: integer
+      url_rewrite:
+        description: url重写功能
+        example: ""
+        type: string
+      weight_list:
+        description: 权重列表
+        example: ""
+        type: string
+      white_list:
+        description: 白名单ip
+        example: ""
+        type: string
+    required:
+    - ip_list
+    - rule
+    - service_desc
+    - service_name
+    - weight_list
     type: object
   dto.ServiceAddTcpInput:
     properties:
@@ -100,18 +336,22 @@ definitions:
       ip_list:
         type: string
       open_auth:
+        description: 权限访问控制
         type: integer
       port:
+        description: tcp路由配置
         maximum: 8999
         minimum: 8001
         type: integer
       round_type:
+        description: 负载均衡
         type: integer
       service_desc:
         type: string
       service_flow_limit:
         type: integer
       service_name:
+        description: 服务基本信息
         type: string
       weight_list:
         type: string
@@ -184,16 +424,20 @@ definitions:
       header_transfor:
         type: string
       id:
+        description: 服务基本信息
         type: integer
       ip_list:
         type: string
       open_auth:
+        description: 权限访问控制
         type: integer
       port:
+        description: GRPC路由配置
         maximum: 8999
         minimum: 8001
         type: integer
       round_type:
+        description: 负载均衡
         type: integer
       service_desc:
         type: string
@@ -216,6 +460,123 @@ definitions:
     - weight_list
     type: object
   dto.ServiceUpdateHTTPInput:
+    properties:
+      black_list:
+        description: 黑名单ip
+        example: ""
+        type: string
+      clientip_flow_limit:
+        description: 客户端ip限流
+        example: 0
+        minimum: 0
+        type: integer
+      header_transfor:
+        description: header转换
+        example: ""
+        type: string
+      id:
+        description: 服务基本信息
+        example: 62
+        minimum: 1
+        type: integer
+      ip_list:
+        description: ip列表
+        example: 127.0.0.1:80
+        type: string
+      need_https:
+        description: 支持https
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      need_strip_uri:
+        description: 启用strip_uri
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      need_websocket:
+        description: 是否支持websocket
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      open_auth:
+        description: 权限访问控制
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      round_type:
+        description: 负载均衡
+        example: 0
+        maximum: 3
+        minimum: 0
+        type: integer
+      rule:
+        description: 域名或者前缀
+        example: /test_http_service_indb
+        type: string
+      rule_type:
+        description: http路由配置
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      service_desc:
+        description: 服务描述
+        example: test_http_service_indb
+        maxLength: 255
+        minLength: 1
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        example: 0
+        minimum: 0
+        type: integer
+      service_name:
+        description: 服务名
+        example: test_http_service_indb
+        type: string
+      upstream_connect_timeout:
+        description: 建立连接超时, 单位s
+        example: 0
+        minimum: 0
+        type: integer
+      upstream_header_timeout:
+        description: 获取header超时, 单位s
+        example: 0
+        minimum: 0
+        type: integer
+      upstream_idle_timeout:
+        description: 链接最大空闲时间, 单位s
+        example: 0
+        minimum: 0
+        type: integer
+      upstream_max_idle:
+        description: 最大空闲链接数
+        example: 0
+        minimum: 0
+        type: integer
+      url_rewrite:
+        description: url重写功能
+        example: ""
+        type: string
+      weight_list:
+        description: 权重列表
+        example: "50"
+        type: string
+      white_list:
+        description: 白名单ip
+        example: ""
+        type: string
+    required:
+    - id
+    - ip_list
+    - rule
+    - service_desc
+    - service_name
+    - weight_list
     type: object
   dto.ServiceUpdateTcpInput:
     properties:
@@ -226,16 +587,20 @@ definitions:
       forbid_list:
         type: string
       id:
+        description: 服务基本信息
         type: integer
       ip_list:
         type: string
       open_auth:
+        description: 权限访问控制
         type: integer
       port:
+        description: tcp路由配置
         maximum: 8999
         minimum: 8001
         type: integer
       round_type:
+        description: 负载均衡
         type: integer
       service_desc:
         type: string
@@ -495,6 +860,33 @@ paths:
                   type: string
               type: object
       summary: 服务删除
+      tags:
+      - 服务管理
+  /service/service_detail:
+    get:
+      consumes:
+      - application/json
+      description: 服务详情
+      operationId: /service/service_detail
+      parameters:
+      - description: 服务ID
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dao.ServiceDetail'
+              type: object
+      summary: 服务详情
       tags:
       - 服务管理
   /service/service_list:
